# airup

representation-learning/: .gitignore  asdf.py  config.yaml  evaluation.py  inference.py  main.py  tmp.py
representation-learning/input/: README.md
representation-learning/output/: README.md
representation-learning/util/: QADataset.py  api.py  data_generator.py  inference_utils.py  inference_utils_old.py  pubmed_api.py  query_preprocessing.py  word2vec.py
representation-learning/word2vecTools/: README.md
reranking/: config.py  data_preprocessing.py  evaluation.py  generate_results.py  metrics.py  model.py  question_clustering.py  training.py
traditional_IR/: .gitignore  config.example.py  document.py  main.py  main_test.py  pyproject.toml  snippet.py  spacy_helper.py  utils.py
traditional_IR/custom_models/: BM25.py  BM25F.py
traditional_IR/word2vec/: query_preprocessing.py  word2vec.py
